# serverD

./: .gitignore  init_python.sh  setup.cfg  setup.py
serverD/: core.py  exceptions.py  launch.py  serverManager.py  settings.py
serverD/configs/: cli.yaml
serverD/scripts/: new_server  serverGet  serverLogin  serverPut
supervisord.d/: supervisord.conf
tests/: test_server_manager.py
