[metadata]
name = serverD
author = shijiang Pan
author_email = 1377161366@qq.com
version = attr: serverD.__version__
description = 快速的服务器登录, 上传, 下载
keywords = packaging, resources
license = MIT
home_page = https://github.com/pansj66/serverD
;project_urls =
;    Issue Tracker = https://github.com/wimglenn/resources-example/issues
;classifiers =
;    Intended Audience :: Developers
;    License :: OSI Approved :: MIT License
;    Operating System :: OS Independent
;    Programming Language :: Python :: 2
;    Programming Language :: Python :: 3
;    Topic :: Software Development :: Libraries :: Python Modules
;    Topic :: System :: Archiving :: Packaging
;    Topic :: System :: Systems Administration
;    Topic :: Utilities

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources
    pyyaml
    click


[options.entry_points]
console_scripts =
    serverD = serverD.launch:launch_entry

[bdist_wheel]
universal = 1